# canary

./: .gitignore  README.md  kill_canary.sh  requirements.txt  run_canary.sh  setup.cfg  setup.py
canary-dashboard/: README.md
canary/cmd/: canary_producer.py  canary_server.py  canary_worker.py  server.py
canary/common/: cli.py
canary/drivers/: cassandradriver.py
canary/drivers/cassandra/: cassandradriver.py  schema_migration.cql
canary/drivers/cassandra/migrations/: 001_initial_schema.cql
canary/drivers/migrations/: 001_intial_schema.cql
canary/drivers/mongo/: mongodriver.py
canary/drivers/redis/: redisdriver.py
canary/model/: __init__.py
canary/openstack/common/: gettextutils.py  importutils.py  jsonutils.py  local.py  log.py  timeutils.py
canary/tasks/base/: __init__.py  driver.py  services.py
canary/tasks/flows/: store_details.py
canary/tasks/taskflow/: __init__.py  driver.py  services.py
canary/transport/wsgi/: app.py  driver.py
canary/transport/wsgi/v1_0/: __init__.py  conductors.py  jobs.py
canary/util/: __init__.py
canary_web/: canary_web.css  canary_web.html  canary_web.js
dashboard/: README.rst  app.py  dashboard.css  dashboard.html  dashboard.js  data_collector.py  requirements.txt  run-dashboard.sh  test_data.txt
dashboard/.meteor/: .id  packages  versions
dashboard/static/css/: landing-page.css
dashboard/templates/: index.html
docker/: canary.yml  dependencies.yml
docker/api/: Dockerfile  canary.conf
etc/: canary.conf  logging.conf
solum/: dashboard_plan-file.yaml  dashboard_run.sh
