[metadata]
name = canary
version = 0.1
summary = Monitoring Service for Openstack Taskflow's Jobboards
description-file =
    README.md
author =  Amit Gandhi, Tony Tan, Sriram Madapusi Vasudevan
home-page = https://github.com/rackerlabs/canary
classifier =
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3.3
    Programming Language :: Python :: 3.4
[files]
packages =
    canary

[entry_points]
console_scripts =
    canary-worker = canary.cmd.canary_worker:run
    canary-producer = canary.cmd.canary_producer:run
    canary-server = canary.cmd.server:run
